--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -37,3 +37,19 @@
     font-weight: 600;
     color: rgb(34, 34, 34);
   }
+  .gridButton{
+    display: grid;
+    grid-gap: 20px;
+    grid-auto-rows: 100px;
+    grid-template-areas: 'a b c d e';
+    align-items: start;
+  }
+  .item1{
+    grid-area:a;
+  }
+  .item2{
+    grid-area:b;
+  }
+  .item3{
+    grid-area:e;
+  }
