Arreglo grid del register login

--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -7,7 +7,15 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    height: 72vh;
+  }
+
+  .Auth-form-container1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 90vh;
   }
   
   .Auth-form {
