--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -61,3 +61,35 @@
   .item3{
     grid-area:e;
   }
+  .viewport {
+    position: relative;
+  }
+  video {
+    width: 100%;
+    height: auto;
+  }
+  canvas {
+    width: 5%;
+    height: auto;
+  }
+  .custom-search {
+    position: relative;
+  }
+  .custom-search-input {
+    width: 100%;
+    padding: 10px 100px 10px 20px; 
+    line-height: 1;
+    outline: none;
+  }
+  .custom-search-botton {
+    position: absolute;
+    right: 3px; 
+    top: 3px;
+    bottom: 3px;
+    border: 0;
+    outline: none;
+  }
+  .codeResult {
+    text-align: center;
+    font-size: 24px;
+  }
