--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -93,7 +93,28 @@
     text-align: center;
     font-size: 24px;
   }
-  .prueba {
+  ul {
+    position: relative;
+    list-style-type: none;
+    padding-left: 0px;
+    background-color: #aaa;
+  }
+  li {
     display: flex;
-    background-color: brown;
+    justify-content: space-between;
+    position: relative;
+    border: 5px black solid;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 5px;
+    width: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: aqua;
+  }
+  .name {
+    padding-left: 10px;
+  }
+  .price {
+    padding-right: 10px;
   }
