--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -109,13 +109,32 @@ canvas {
 
 /** Page Order **/
 
+.Prueba {
+
+    
+    padding-left: 32%; /** antiguo 6% **/
+    
+
+}
+
+@media screen and (max-width: 780px) {
+    .Prueba {
+        justify-content: center;
+        padding-left: 0;
+
+
+    }
+
+    
+}
+
 
 .ContainerProduct {
 
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    padding-left: 6%;
+    padding-left: 30%; /** antiguo 6% **/
     margin-top: 40px;
 
 }
@@ -125,7 +144,7 @@ canvas {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    padding-left: 1%;
+    padding-left: 28%;
     margin-top: 50px;
 
 }
