--- a/frontend/src/static/css/style.css
+++ b/frontend/src/static/css/style.css
@@ -134,8 +134,10 @@ canvas {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    padding-left: 30%; /** antiguo 6% **/
+    /** padding-left: 30%; /** antiguo 6% **/
+    justify-content: center;
     margin-top: 40px;
+
 
 }
 
@@ -145,6 +147,7 @@ canvas {
     flex-wrap: wrap;
     gap: 30px;
     padding-left: 28%;
+    
     margin-top: 50px;
 
 }
